# MachineLearningwithPyTorchandScikit-Learn

./: README.md  main.py  pyproject.toml
chpt1/: README.md  chpt1.ipynb
chpt2/: README.md  chpt2.ipynb
chpt3/: README.md  chpt3.ipynb
chpt4/: README.md  chpt4.ipynb  imputer_diagram
chpt5/: README.md  chpt5.py
chpt6/: README.md  chpt6.py
chpt7/: README.md  chpt7.py
chpt8/: README.md  chpt8.py
chpt9/: README.md  chpt9.py
utils/: helper.py
