[project]
name = "machinelearningwithpytorchandscikit-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "category-encoders>=2.6.4",
    "graphviz>=0.21",
    "ipykernel>=6.29.5",
    "marimo>=0.14.10",
    "matplotlib==3.4.3",
    "numpy==1.21.2",
    "pandas==1.3.2",
    "scikit-learn==1.0",
    "scipy==1.7.0",
]
