[project]
name = "machinelearningwithpytorchandscikit-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "category-encoders>=2.6.4",
    "graphviz>=0.21",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "marimo>=0.14.10",
    "matplotlib==3.4.3",
    "mlxtend>=0.19.0",
    "nltk>=3.9.1",
    "numpy==1.21.2",
    "pandas==1.3.2",
    "pyarrow>=21.0.0",
    "pyprind>=2.11.3",
    "scikit-learn==1.0",
    "scipy==1.7.0",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "xgboost==1.5.1",
]
